--- a/src/OurTime.WebUI/Views/Catalog/Details.cshtml
+++ b/src/OurTime.WebUI/Views/Catalog/Details.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div class="col-md-6">
         <h1 class="mb-3">@Model.Name</h1>
-        <h4 class="text-primary mb-4">@Model.PriceAmount</h4>
+        <h4 class="text-primary mb-4">@Model.Price</h4>
 
         <div class="mt-4">
             <h5>Description</h5>
