--- a/src/OurTime.WebUI/Views/Home/Index.cshtml
+++ b/src/OurTime.WebUI/Views/Home/Index.cshtml
@@ -41,6 +41,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/confetti.js" asp-append-version="true"></script>
+
     <script>
         let position = 0;
         const visibleCards = 3;
