--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <ul>
                 <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-controller="Home" asp-action="Watches">Watches</a></li>
+                <li><a asp-controller="Home" asp-action="Reviews" asp-route-productId="1">Reviews</a></li>
                 <li><a asp-controller="Home" asp-action="About">About us</a></li>
                 <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                 <li><a asp-controller="Catalog" asp-action="Index">Test</a></li>
