--- a/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/OurTime.WebUI/Views/Shared/_Layout.cshtml
@@ -21,7 +21,6 @@
             <ul>
                 <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-controller="Home" asp-action="Watches">Watches</a></li>
-                <li><a asp-controller="Home" asp-action="Reviews" asp-route-productId="1">Reviews</a></li>
                 <li><a asp-controller="Home" asp-action="About">About us</a></li>
                 <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                 <li><a asp-controller="Catalog" asp-action="Index">Test</a></li>
@@ -39,6 +38,7 @@
                     <li><a asp-controller="Account" asp-action="Login">Log in</a></li>
                 }
 
+                <!-- Kundkorg med ikon -->
                 <li>
                     <a href="#" onclick="showCart(); return false;">
                         <i class="fas fa-cart-shopping"></i>
@@ -62,24 +62,25 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <!-- 🟢 Flyttad cart.js och updateCartBadge direkt efter -->
-    <script src="~/js/cart.js" asp-append-version="true"></script>
-    <script>document.addEventListener("DOMContentLoaded", updateCartBadge);</script>
+    <script src="~/js/cart.js" defer asp-append-version="true"></script>
 
     <script>
         function showCart() {
             $('#cartModal').modal('show');
         }
 
+        // Toggle-funktion för information
         function toggleInfo(id) {
             const info = document.getElementById(id);
             const button = document.querySelector(`button[onclick="toggleInfo('${id}')"]`);
             
+            // Om texten är öppen
             if (info.style.maxHeight && info.style.maxHeight !== "0px") {
                 info.style.maxHeight = "0px";
                 button.textContent = "More information";
-            } else {
+            } 
+            // Om texten är stängd
+            else {
                 info.style.maxHeight = info.scrollHeight + "px";
                 button.textContent = "Less information";
             }
