--- a/src/OurTime.WebUI/Views/_ViewImports.cshtml
+++ b/src/OurTime.WebUI/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿﻿@using OurTime.WebUI
 @using OurTime.WebUI.Models
 @using OurTime.WebUI.Models.Dtos
-@using OurTime.WebUI.Models.Entities
+@using OurTime.Domain.Entities
 @using OurTime.WebUI.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
